--- a/staff/index.html
+++ b/staff/index.html
@@ -105,8 +105,8 @@
 
 <body>
     <div class="navbar">
-        <a href="index.html">Home</a>
-        <a href="staff.html">Staff</a>
+        <a href="/">Home</a>
+        <a href="/staff">Staff</a>
         <a href="https://discord.com/invite/userpfp-1129784704267210844">Discord</a>
     </div>
 
