--- a/staff/index.html
+++ b/staff/index.html
@@ -105,7 +105,7 @@
 
 <body>
     <div class="navbar">
-        <a href="/website/">Home</a>
+        <a href="/website">Home</a>
         <a href="/website/staff">Staff</a>
         <a href="https://discord.com/invite/userpfp-1129784704267210844">Discord</a>
     </div>
